2015-02-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.12 released.

2015-02-25  c.hetherington  <cth@carlh.net>

	* Fix one cause of hangs right at the end of an encode
	run (#508).

2015-02-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.11 released.

2015-02-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.10 released.

2015-02-24  Carl Hetherington  <cth@carlh.net>

	* Fix corrupted frames and crashes when duplicating
	frames from sources into the DCP (#507).

2015-02-22  Carl Hetherington  <cth@carlh.net>

	* Add a note to the timing panel to try to stop people
	changing the video frame rate in the wrong circumstances.

2015-02-16  Carl Hetherington  <cth@carlh.net>

	* Allow "deletion" of the audio part of a FFmpeg
	file from the timeline; delete unmaps the audio (#316).

2015-02-16  c.hetherington  <cth@carlh.net>

	* Resurrect JSON server code.

2015-02-14  Carl Hetherington  <cth@carlh.net>

	* Remove ^H shortcut to Hints dialog as it clashes
	with OS X's hide shortcut.

	* Possibly fix a variety of odd crashes caused by
	dangling connections to signals.

	* Version 1.77.9 released.

2015-02-13  Carl Hetherington  <cth@carlh.net>

	* Speculative fix for crash on finding a server which
	may be caused by a failure to disconnect from
	ServerFinder when an Encoder is destroyed.

2015-02-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.8 released.

2015-02-04  Carl Hetherington  <cth@carlh.net>

	* Sort image sequences using the numeric part of the
	leaf name, rather than alphanumerically (#469).

	* Version 1.77.7 released.

2015-02-04  Carl Hetherington  <cth@carlh.net>

	* Fix some bad string encodings and another
	no-scale crash (when content is larger than the
	container) (possibly #482).

2015-02-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.6 released.

2015-02-03  Carl Hetherington  <cth@carlh.net>

	* Fix crash on cropping a 1920x1080 content top
	and bottom and then fitting it into a Scope
	container.
